--- a/html/apple1js.html
+++ b/html/apple1js.html
@@ -14,12 +14,14 @@
 <html>
   <head>
     <title>Apple 1js</title>
-    <meta name="viewport" content="width=602, user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta name="viewport" content="width=640, user-scalable=no" />
 
     <link rel="stylesheet" type="text/css" href="css/apple1.css" />
  </head>
   <body>
-    <div style="margin: auto; width: 602px">
+    <div style="margin: auto; width: 610px">
       <div class="inset">
         <h1 style="font-size: 24px" class="motter">Apple 1js</h1>
         <h2 id="subtitle">An Apple 1 Emulator in JavaScript</h1>
@@ -28,7 +30,9 @@
         <canvas width="560" height="384" id="screen" />
       </div>
       <div class="inset">
-        <div id="player"></div><div id="player_label"></div>
+        <label for="tape_menu">Tape:</label>
+        <select id="tape_menu" value=""></select>
+        <div id="player"></div>
       </div>
       <div class="inset">
         <div id="keyboard"></div>
