fix mobile bounce

--- a/html/apple1js.html
+++ b/html/apple1js.html
@@ -42,6 +42,11 @@
     <script type="text/javascript">
     {
         var main = require('./js/main.js');
+
+        window.ontouchmove = function(event) {
+            event.preventDefault();
+        };
+
         function updateHash() {
             var hash = document.location.hash;
             if (hash) {
