Back out paste hack, other WIP.

--- a/html/apple1js.html
+++ b/html/apple1js.html
@@ -28,12 +28,18 @@
       </div>
       <div class="overscan">
         <canvas width="560" height="384" id="screen" />
-        <input type="text" id="hidden_input"></input>
+        <!-- <input type="text" id="hidden_input"></input> -->
       </div>
       <div class="inset">
         <label for="tape_menu">Tape:</label>
         <select id="tape_menu" value=""></select>
         <div id="player"></div>
+        <!--
+        <div style="display: inline-block">
+            <input id="tape_file" type="file">
+            <button onclick="loadFile()">Load</button>
+        </div>
+        -->
       </div>
       <div class="inset">
         <div id="keyboard"></div>
